Implement square and square root

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <table style="width: 100%" border="1">
+    <table style="width: 100%" border="double 3px">
       <tr>
         <td>
           <strong>Calculators</strong>
