--- a/views/main.erb
+++ b/views/main.erb
@@ -2,7 +2,7 @@
 <html>
   <body>
       <form action="/square/results">
-        <label for="prompt">Enter a number</label><br>
+        <label for="number">Enter a number</label><br>
         <input type="text" id="number" name="number" placeholder="What number do you want to pick"><br>
         <button>Calculate square</button>
       </form>
