--- a/views/random.erb
+++ b/views/random.erb
@@ -2,10 +2,10 @@
 <html>
   <body>
       <form action="/random/results">
-        <label for="minimum">Minimum</label>
+        <label for="min">Minimum</label>
         <input type="text" id="min" name="min" placeholder="E.g. 1.5"><br>
 
-        <label for="maximum">Maximum</label>
+        <label for="max">Maximum</label>
         <input type="text" id="max" name="max" placeholder="E.g. 4.5"><br>
         <button>Pick random number"</button>
       </form>
