--- a/views/root_results.erb
+++ b/views/root_results.erb
@@ -5,7 +5,7 @@
     <p>Number<br>
       <%= @input%></p>
       <p>Square Root<br>
-      <%= @input.to_f**0.5 %>
+      <%= @root %>
     </p>
     <p><a href="/square_root/new">Calculate another square root</a><p>
   </body>
