--- a/views/square_results.erb
+++ b/views/square_results.erb
@@ -5,7 +5,7 @@
     <p>Number<br>
       <%= @input%></p>
       <p>Square<br>
-      <%= @input.to_f**2 %>
+      <%= @square %>
     </p>
     <p><a href="/square/new">Calculate another square</a><p>
   </body>
